[package]
name = "dht-embedded"
version = "0.1.0"
description = "Library for reading temperature and humidity from the DHT11 and DHT22 sensors"
license = "MIT OR Apache-2.0"
authors = ["Brian J. Tarricone <brian@tarricone.org>"]
homepage = "https://github.com/kelnos/dht-embedded-rs"
repository = "https://github.com/kelnos/dht-embedded-rs"
readme = "README.md"
categories = [ "embedded", "hardware-support" ]
keywords = [ "temperature", "humidity", "sensor", "dht11", "dht22" ]
edition = "2021"

[features]
default = []
std = []

[dependencies]
embedded-hal = "=1.0.0-alpha.8"

[dev-dependencies]
anyhow = "1"
gpio-cdev = "0.5"
linux-embedded-hal = "0.3"
serial = "0.4"
