[package]
name = "dht-embedded"
version = "0.3.1-alpha.1"
description = "Library for reading temperature and humidity from the DHT11 and DHT22 sensors"
license = "MIT OR Apache-2.0"
authors = ["Brian J. Tarricone <brian@tarricone.org>"]
homepage = "https://github.com/kelnos/dht-embedded-rs"
repository = "https://github.com/kelnos/dht-embedded-rs"
readme = "README.md"
categories = [ "embedded", "hardware-support" ]
keywords = [ "temperature", "humidity", "sensor", "dht11", "dht22" ]
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
std = []

[dependencies]
embedded-hal = "=1.0.0-rc.1"

[dev-dependencies]
anyhow = "1"
gpio-cdev = "0.5"
linux-embedded-hal = "0.3"
